syntax = "proto3";

option csharp_namespace = "DirectoryService.Protos.Services";
import "google/protobuf/empty.proto";

service RootDirectoryInitializer {
  rpc CreateRootDirectory(CreateRootArgs) returns (google.protobuf.Empty);
}

message CreateRootArgs {
  int64 uid = 1;
}